--- a/index.html
+++ b/index.html
@@ -130,12 +130,20 @@
     <!-- BACKGROUND CANVAS -->
     <canvas id="pinkboard"></canvas>
 
-    <!-- MUSIC -->
+       <!-- MUSIC -->
     <div class="music-control" onclick="toggleMusic()">💿</div>
     <audio id="bg-music" loop>
-        <!-- Link nhạc Phan Mạnh Quỳnh -->
-        <source src="https://data.chiasenhac.com/down/2274/4/2273678-0c68377c/128/Tinh%20Yeu%20Giua%20Mua%20Dong%20-%20Phan%20Manh%20Quy.mp3" type="audio/mpeg">
+        <!-- Đã sửa thành file nhạc upload trực tiếp cho ổn định -->
+        <source src="music.mp3" type="audio/mpeg">
     </audio>
+
+    <div class="container">
+        <!-- ẢNH SLIDESHOW (Giữ nguyên 3 ảnh của ông) -->
+        <div class="photo-frame">
+            <img src="https://i.ibb.co/39dR6M7y/22a82464-d5ab-4b16-ac5c-e5f576b28df3.jpg" class="active">
+            <img src="https://i.ibb.co/kVSC53Sy/b72d25f5-8263-4b6d-ae3f-d71c478369d6.jpg">
+            <img src="https://i.ibb.co/jPfK1nmm/5777c032-3742-437e-80d1-6afefcb8232c.jpg">
+        </div>
 
     <div class="container">
         <!-- ẢNH SLIDESHOW (3 ảnh trong link mày gửi) -->
